# Level2

./: .gitignore  CMakeLists.txt  LICENSE.MIT  README.md  getDependencies.sh
LICENSES/: LICENSE.mosquitto
framework/: CMakeLists.txt  doxyfile
framework/cmake/: FindMosquito.cmake
framework/src/: CMakeLists.txt  main.cpp
framework/src/application/: CMakeLists.txt  application.cpp  application.h
framework/src/applicationcontext/: CMakeLists.txt  applicationDirectories.cpp  applicationDirectories.h  applicationcontext.cpp  applicationcontext.h
framework/src/common/: CMakeLists.txt  base64.cpp  base64.h  common.h  matchable.cpp  matchable.h  mosquittowrapper.cpp  mosquittowrapper.h  serializables.h  systemUtils.cpp  systemUtils.h
framework/src/connectors/: CMakeLists.txt
framework/src/connectors/fileconnector/: CMakeLists.txt  fileconnector.cpp  filewriter.cpp  filewriter.h
framework/src/connectors/mqttconnector/: CMakeLists.txt  mosquittowrapper.cpp  mosquittowrapper.h  mqttconnector.cpp  mqttconnector.h
framework/src/dbinterface/: CMakeLists.txt  dbinterface.cpp  dbinterface.h
framework/src/listeners/: CMakeLists.txt  generic_server.cpp  generic_server.h  listeners.h  networklistener.cpp  networklistener.h
framework/src/listeners/filelistener/: CMakeLists.txt  filelistener.cpp  filelistener.h
framework/src/listeners/httplistener/: CMakeLists.txt  headerfieldowner.cpp  headerfieldowner.h  http11.cpp  http11.h  httpdefs.h  httpexception.cpp  httpexception.h  httplistener.cpp  httplistener.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h
framework/src/listeners/mqttlistener/: CMakeLists.txt  mqttlistener.cpp  mqttlistener.h
framework/src/logger/: CMakeLists.txt  logger.cpp  logger.h  loggingdestinations.cpp  loggingdestinations.h  loglevels.cpp  loglevels.h  timeproviders.cpp  timeproviders.h
framework/src/networkcommon/: CMakeLists.txt  mosquittowrapper.cpp  mosquittowrapper.h
framework/src/pipeline/: CMakeLists.txt  README.md  fillerpipe.cpp  fillerpipe.h  matchable.cpp  matchable.h  pipeline.cpp  pipeline.h  pipelineapi.h  pipelinefifo.cpp  pipelinefifo.h  pipelineprocessor.cpp  pipelineprocessor.h  process.cpp  selecable.h  selectable.cpp
framework/src/pipeline/api/: CMakeLists.txt  apihelpers.cpp  apihelpers.h  apistructs.cpp  apistructs.h  binaryprocessingdata.cpp  binaryprocessingdata.h  payloadnames.h  pipelineapi.h  pipelineprocessingdata.cpp  pipelineprocessingdata.h  pipelinestepinitdata.cpp  pipelinestepinitdata.h  processingerror.cpp  processingerror.h  processingpayload.cpp  processingpayload.h
framework/src/pipeline/api/samplelibs/: CMakeLists.txt
framework/src/pipeline/api/samplelibs/argumentsProcessor/: CMakeLists.txt  argumentsProcessor.cpp
framework/src/pipeline/api/samplelibs/binaryDataProcessor/: CMakeLists.txt  binaryDataProcessor.cpp  binaryDataProcessor.h
framework/src/pipeline/api/samplelibs/helloWorld/: CMakeLists.txt  helloWorld.cpp
framework/src/pipeline/api/workerModules/: CMakeLists.txt
framework/src/pipeline/api/workerModules/argumentsProcessor/: CMakeLists.txt  argumentsProcessor.cpp
framework/src/pipeline/api/workerModules/binaryDataProcessor/: CMakeLists.txt
framework/src/pipeline/api/workerModules/helloWorld/: CMakeLists.txt  helloWorld.cpp
framework/tests/: .gitignore  CMakeLists.txt  test_apistructs.cpp  test_application.cpp  test_applicationcontext.cpp  test_common.cpp  test_dbinterface.cpp  test_eventForge.cpp  test_fileconnector.cpp  test_filelistener.cpp  test_httplistener.cpp  test_logger.cpp  test_loggingdestinations.cpp  test_mqttconnector.cpp  test_mqttlistener.cpp  test_pipeline.cpp  test_pipeline_payload_matching.cpp  test_pipelinefifo.cpp  test_pipelineprocessor.cpp  test_process.cpp  test_timeproviders.cpp
framework/tests/testdata/: applicationConfig01.json  applicationConfig02.json  applicationConfig03.json  applicationConfig04.json  applicationConfig05.json  applicationConfig06.json  applicationConfig07.json  applicationConfig08.json  applicationConfig09.json  applicationConfig10.json  applicationConfig11.json  applicationConfig12.json  httpRequest01.txt  httpRequest02.txt  httpRequest03.txt  httpRequest04.txt  httpRequest05.txt  httpRequest06.txt  httpRequest07.txt  pipelineConfig01.json  pipelineConfig02.json  pipelineConfig03.json  pipelineConfig04.json  pipelineConfig05.json  pipelineConfig06.json  pipelineConfig07.json  pipelineConfig08.json  pipelineConfig09.json  processConfig01.json  processConfig02.json  processConfig03.json  processConfig04.json
sampleApplications/: CMakeLists.txt
sampleApplications/driversLog/: CMakeLists.txt  getDependencies.sh
sampleApplications/driversLog/src/: CMakeLists.txt
sampleApplications/driversLog/src/businessObjects/: CMakeLists.txt  businessObject.h  car.cpp  car.h
sampleApplications/driversLog/tests/: CMakeLists.txt  test_car.cpp
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  logger.cpp  logger.h  loggingdestinations.cpp  loggingdestinations.h  loglevels.h  timeproviders.h  visibility.h
src/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.h
tests/: CMakeLists.txt  test_logger.cpp  test_loggingdestinations.cpp  test_pipeline.cpp  test_secondTake.cpp  test_timeproviders.cpp
tests/testdata/: pipelineConfig01.json
